Fix footer item spacing on mobile

--- a/_sass/molecules/_footer.scss
+++ b/_sass/molecules/_footer.scss
@@ -28,6 +28,9 @@ footer {
 }
 
 @include mobile {
+  footer {
+    justify-content: space-around;
+  }
   .social-links a {
     padding-left: 2px;
   }
